--- a/package.json
+++ b/package.json
@@ -1,31 +1,47 @@
 {
   "name": "jptv",
+  "productName": "jptv",
   "version": "1.0.0",
-  "description": "A simple JS/TS video player",
-  "main": "main.js",
+  "description": "Simple video player written in electron",
+  "main": ".vite/build/main.js",
   "scripts": {
-    "test": "test",
-    "start": "electron ."
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/AndresMpa/jptv.git"
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make",
+    "publish": "electron-forge publish",
+    "lint": "eslint --ext .ts,.tsx ."
   },
   "keywords": [
-    "js",
-    "ts",
+    "electron",
+    "typescript",
     "video",
-    "player",
-    "electron"
+    "player"
   ],
-  "author": "AndresMpa",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/AndresMpa/jptv/issues"
+  "author": {
+    "name": "Andres M. Prieto",
+    "email": "andresprieto2703@gmail.com"
   },
-  "homepage": "https://github.com/AndresMpa/jptv#readme",
+  "license": "MIT",
+  "dependencies": {
+    "electron-squirrel-startup": "^1.0.1"
+  },
   "devDependencies": {
-    "electron": "^25.1.0",
-    "electron-reload": "^2.0.0-alpha.1"
+    "@electron-forge/cli": "^7.4.0",
+    "@electron-forge/maker-deb": "^7.4.0",
+    "@electron-forge/maker-rpm": "^7.4.0",
+    "@electron-forge/maker-squirrel": "^7.4.0",
+    "@electron-forge/maker-zip": "^7.4.0",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.4.0",
+    "@electron-forge/plugin-fuses": "^7.4.0",
+    "@electron-forge/plugin-vite": "^7.4.0",
+    "@electron/fuses": "^1.8.0",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "electron": "31.0.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-import": "^2.29.1",
+    "ts-node": "^10.9.2",
+    "typescript": "~4.5.4",
+    "vite": "^5.3.1"
   }
 }
