--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   },
   "license": "MIT",
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.1"
+    "electron-squirrel-startup": "^1.0.1",
+    "ts-dotenv": "^0.9.1"
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.4.0",
